--- a/src/main/webapp/returnFormat/Edit.xhtml
+++ b/src/main/webapp/returnFormat/Edit.xhtml
@@ -12,46 +12,66 @@
             <h:form id="ReturnFormatEditForm">
                 <h:panelGroup id="display">
                     <p:panelGrid columns="2" rendered="#{returnFormatController.selected != null}">
-                        <p:outputLabel value="#{bundleReturns.EditReturnFormatLabel_name}" for="name" />
-                        <p:inputText id="name" value="#{returnFormatController.selected.name}" title="#{bundleReturns.EditReturnFormatTitle_name}" />
-                        <p:outputLabel value="#{bundleReturns.EditReturnFormatLabel_code}" for="code" />
-                        <p:inputText id="code" value="#{returnFormatController.selected.code}" title="#{bundleReturns.EditReturnFormatTitle_code}" />
-                        <p:outputLabel value="#{bundleReturns.EditReturnFormatLabel_frequency}" for="frequency" />
-                        <p:selectOneMenu id="frequency" value="#{returnFormatController.selected.frequency}" >
-                            <f:selectItem value="#{enumController.returnTimeFrequencys}" ></f:selectItem>
+
+
+                        <p:outputLabel value="#{bundleReturns.CreateReturnFormatLabel_name}" for="name" />
+                        <p:inputText id="name" value="#{returnFormatController.selected.name}" title="#{bundleReturns.CreateReturnFormatTitle_name}" />
+                        <p:outputLabel value="#{bundleReturns.CreateReturnFormatLabel_code}" for="code" />
+                        <p:inputText id="code" value="#{returnFormatController.selected.code}" title="#{bundleReturns.CreateReturnFormatTitle_code}" />
+                        <p:outputLabel value="#{bundleReturns.CreateReturnFormatLabel_frequency}" for="code" />
+                        <p:selectOneMenu value="#{returnFormatController.selected.frequency}" >
+                            <f:selectItems value="#{enumController.returnTimeFrequencys}" ></f:selectItems>
                         </p:selectOneMenu>
-                        <p:outputLabel value="#{bundleReturns.EditReturnFormatLabel_category}" for="category" />
+
+                        <p:outputLabel value="#{bundleReturns.CreateReturnFormatLabel_category}" for="category" />
                         <p:selectOneMenu id="category" value="#{returnFormatController.selected.category}" >
-                            <f:selectItem itemLabel="#{bundleReturns.SelectOneMessage}"/>
                             <f:selectItems value="#{itemController.itemsAvailableSelectOne}"
                                            var="categoryItem"
                                            itemValue="#{categoryItem}"
                                            itemLabel="#{categoryItem.name}"/>
                         </p:selectOneMenu>
-                        <p:outputLabel value="#{bundleReturns.EditReturnFormatLabel_senderStartDays}" for="senderStartDays" />
-                        <p:inputText id="senderStartDays" value="#{returnFormatController.selected.senderStartDays}" title="#{bundleReturns.EditReturnFormatTitle_senderStartDays}" />
-                        <p:outputLabel value="#{bundleReturns.EditReturnFormatLabel_senderSubmitDays}" for="senderSubmitDays" />
-                        <p:inputText id="senderSubmitDays" value="#{returnFormatController.selected.senderSubmitDays}" title="#{bundleReturns.EditReturnFormatTitle_senderSubmitDays}" />
-                        <p:outputLabel value="#{bundleReturns.EditReturnFormatLabel_sendingDeadline}" for="sendingDeadline" />
-                        <p:inputText id="sendingDeadline" value="#{returnFormatController.selected.sendingDeadline}" title="#{bundleReturns.EditReturnFormatTitle_sendingDeadline}" />
-                        <p:outputLabel value="#{bundleReturns.EditReturnFormatLabel_prepairedBy}" for="prepairedBy" />
-                        <p:inputText id="prepairedBy" value="#{returnFormatController.selected.prepairedBy}" title="#{bundleReturns.EditReturnFormatTitle_prepairedBy}" />
-                        <p:outputLabel value="#{bundleReturns.EditReturnFormatLabel_sentBy}" for="sentBy" />
-                        <p:inputText id="sentBy" value="#{returnFormatController.selected.sentBy}" title="#{bundleReturns.EditReturnFormatTitle_sentBy}" />
-                        <p:outputLabel value="#{bundleReturns.EditReturnFormatLabel_receivedBy}" for="receivedBy" />
-                        <p:inputText id="receivedBy" value="#{returnFormatController.selected.receivedBy}" title="#{bundleReturns.EditReturnFormatTitle_receivedBy}" />
-                        <p:outputLabel value="#{bundleReturns.EditReturnFormatLabel_receiveStartDays}" for="receiveStartDays" />
-                        <p:inputText id="receiveStartDays" value="#{returnFormatController.selected.receiveStartDays}" title="#{bundleReturns.EditReturnFormatTitle_receiveStartDays}" />
-                        <p:outputLabel value="#{bundleReturns.EditReturnFormatLabel_receiveSubmitDays}" for="receiveSubmitDays" />
-                        <p:inputText id="receiveSubmitDays" value="#{returnFormatController.selected.receiveSubmitDays}" title="#{bundleReturns.EditReturnFormatTitle_receiveSubmitDays}" />
-                        <p:outputLabel value="#{bundleReturns.EditReturnFormatLabel_receiveDeadline}" for="receiveDeadline" />
-                        <p:inputText id="receiveDeadline" value="#{returnFormatController.selected.receiveDeadline}" title="#{bundleReturns.EditReturnFormatTitle_receiveDeadline}" />
-                        <p:outputLabel value="#{bundleReturns.EditReturnFormatLabel_sendingAreaType}" for="sendingAreaType" />
-                        <p:inputText id="sendingAreaType" value="#{returnFormatController.selected.sendingAreaType}" title="#{bundleReturns.EditReturnFormatTitle_sendingAreaType}" />
-                        <p:outputLabel value="#{bundleReturns.EditReturnFormatLabel_receivingAreaType}" for="receivingAreaType" />
-                        <p:inputText id="receivingAreaType" value="#{returnFormatController.selected.receivingAreaType}" title="#{bundleReturns.EditReturnFormatTitle_receivingAreaType}" />
-                        <p:outputLabel value="#{bundleReturns.EditReturnFormatLabel_id}" for="id" />
-                        <p:inputText id="id" value="#{returnFormatController.selected.id}" title="#{bundleReturns.EditReturnFormatTitle_id}" />
+                        <p:outputLabel value="#{bundleReturns.CreateReturnFormatLabel_senderStartDays}" for="senderStartDays" />
+                        <p:inputText id="senderStartDays" value="#{returnFormatController.selected.senderStartDays}" title="#{bundleReturns.CreateReturnFormatTitle_senderStartDays}" />
+                        <p:outputLabel value="#{bundleReturns.CreateReturnFormatLabel_senderSubmitDays}" for="senderSubmitDays" />
+                        <p:inputText id="senderSubmitDays" value="#{returnFormatController.selected.senderSubmitDays}" title="#{bundleReturns.CreateReturnFormatTitle_senderSubmitDays}" />
+                        <p:outputLabel value="#{bundleReturns.CreateReturnFormatLabel_sendingDeadline}" for="sendingDeadline" />
+                        <p:inputText id="sendingDeadline" value="#{returnFormatController.selected.sendingDeadline}" title="#{bundleReturns.CreateReturnFormatTitle_sendingDeadline}" />
+                        <p:outputLabel value="#{bundleReturns.CreateReturnFormatLabel_prepairedBy}" for="prepairedBy" />
+
+                        <p:selectOneMenu id="prepairedBy" value="#{returnFormatController.selected.prepairedBy}" >
+                            <f:selectItems value="#{enumController.privilegeTypes}" ></f:selectItems>
+                        </p:selectOneMenu>
+
+                        <p:outputLabel value="#{bundleReturns.CreateReturnFormatLabel_sentBy}" for="sentBy" />
+                        <p:selectOneMenu id="sentBy" value="#{returnFormatController.selected.sentBy}" >
+                            <f:selectItems value="#{enumController.privilegeTypes}" ></f:selectItems>
+                        </p:selectOneMenu>
+
+
+                        <p:outputLabel value="#{bundleReturns.CreateReturnFormatLabel_receivedBy}" for="receivedBy" />
+                        <p:selectOneMenu id="receivedBy" value="#{returnFormatController.selected.receivedBy}" >
+                            <f:selectItems value="#{enumController.privilegeTypes}" ></f:selectItems>
+                        </p:selectOneMenu>                      
+
+
+                        <p:outputLabel value="#{bundleReturns.CreateReturnFormatLabel_receiveStartDays}" for="receiveStartDays" />
+                        <p:inputText id="receiveStartDays" value="#{returnFormatController.selected.receiveStartDays}" title="#{bundleReturns.CreateReturnFormatTitle_receiveStartDays}" />
+                        <p:outputLabel value="#{bundleReturns.CreateReturnFormatLabel_receiveSubmitDays}" for="receiveSubmitDays" />
+                        <p:inputText id="receiveSubmitDays" value="#{returnFormatController.selected.receiveSubmitDays}" title="#{bundleReturns.CreateReturnFormatTitle_receiveSubmitDays}" />
+                        <p:outputLabel value="#{bundleReturns.CreateReturnFormatLabel_receiveDeadline}" for="receiveDeadline" />
+                        <p:inputText id="receiveDeadline" value="#{returnFormatController.selected.receiveDeadline}" title="#{bundleReturns.CreateReturnFormatTitle_receiveDeadline}" />
+
+                        <p:outputLabel value="#{bundleReturns.CreateReturnFormatLabel_sendingAreaType}" for="sendingAreaType" />
+                        <p:selectOneMenu id="sendingAreaType" value="#{returnFormatController.selected.sendingAreaType}" >
+                            <f:selectItems value="#{enumController.areaTypes}" ></f:selectItems>
+                        </p:selectOneMenu>
+
+                        <p:outputLabel value="#{bundleReturns.CreateReturnFormatLabel_receivingAreaType}" for="receivingAreaType" />
+                        <p:selectOneMenu id="receivingAreaType" value="#{returnFormatController.selected.receivingAreaType}" >
+                            <f:selectItems value="#{enumController.areaTypes}" ></f:selectItems>
+                        </p:selectOneMenu>
+
+
                     </p:panelGrid>
                     <p:commandButton actionListener="#{returnFormatController.update}" value="#{bundleReturns.Save}" update="display,:ReturnFormatListForm:datalist,:growl" oncomplete="handleSubmit(args, 'ReturnFormatEditDialog');"/>
                     <p:commandButton value="#{bundleReturns.Cancel}" onclick="ReturnFormatEditDialog.hide()"/>
