--- a/src/main/webapp/returnFormat/Create.xhtml
+++ b/src/main/webapp/returnFormat/Create.xhtml
@@ -16,8 +16,11 @@
                         <p:inputText id="name" value="#{returnFormatController.selected.name}" title="#{bundleReturns.CreateReturnFormatTitle_name}" />
                         <p:outputLabel value="#{bundleReturns.CreateReturnFormatLabel_code}" for="code" />
                         <p:inputText id="code" value="#{returnFormatController.selected.code}" title="#{bundleReturns.CreateReturnFormatTitle_code}" />
-                        <p:outputLabel value="#{bundleReturns.CreateReturnFormatLabel_frequency}" for="frequency" />
-                        <p:inputText id="frequency" value="#{returnFormatController.selected.frequency}" title="#{bundleReturns.CreateReturnFormatTitle_frequency}" />
+                        <p:outputLabel value="#{bundleReturns.CreateReturnFormatLabel_frequency}" for="code" />
+                        <p:selectOneMenu value="#{returnFormatController.selected.frequency}" >
+                            <f:selectItems value="#{enumController.returnTimeFrequencys}" ></f:selectItems>
+                        </p:selectOneMenu>
+
                         <p:outputLabel value="#{bundleReturns.CreateReturnFormatLabel_category}" for="category" />
                         <p:selectOneMenu id="category" value="#{returnFormatController.selected.category}" >
                             <f:selectItems value="#{itemController.itemsAvailableSelectOne}"
@@ -32,23 +35,40 @@
                         <p:outputLabel value="#{bundleReturns.CreateReturnFormatLabel_sendingDeadline}" for="sendingDeadline" />
                         <p:inputText id="sendingDeadline" value="#{returnFormatController.selected.sendingDeadline}" title="#{bundleReturns.CreateReturnFormatTitle_sendingDeadline}" />
                         <p:outputLabel value="#{bundleReturns.CreateReturnFormatLabel_prepairedBy}" for="prepairedBy" />
-                        <p:inputText id="prepairedBy" value="#{returnFormatController.selected.prepairedBy}" title="#{bundleReturns.CreateReturnFormatTitle_prepairedBy}" />
+
+                        <p:selectOneMenu id="prepairedBy" value="#{returnFormatController.selected.prepairedBy}" >
+                            <f:selectItems value="#{enumController.privilegeTypes}" ></f:selectItems>
+                        </p:selectOneMenu>
+
                         <p:outputLabel value="#{bundleReturns.CreateReturnFormatLabel_sentBy}" for="sentBy" />
-                        <p:inputText id="sentBy" value="#{returnFormatController.selected.sentBy}" title="#{bundleReturns.CreateReturnFormatTitle_sentBy}" />
+                        <p:selectOneMenu id="sentBy" value="#{returnFormatController.selected.sentBy}" >
+                            <f:selectItems value="#{enumController.privilegeTypes}" ></f:selectItems>
+                        </p:selectOneMenu>
+
+
                         <p:outputLabel value="#{bundleReturns.CreateReturnFormatLabel_receivedBy}" for="receivedBy" />
-                        <p:inputText id="receivedBy" value="#{returnFormatController.selected.receivedBy}" title="#{bundleReturns.CreateReturnFormatTitle_receivedBy}" />
+                        <p:selectOneMenu id="receivedBy" value="#{returnFormatController.selected.receivedBy}" >
+                            <f:selectItems value="#{enumController.privilegeTypes}" ></f:selectItems>
+                        </p:selectOneMenu>                      
+
+
                         <p:outputLabel value="#{bundleReturns.CreateReturnFormatLabel_receiveStartDays}" for="receiveStartDays" />
                         <p:inputText id="receiveStartDays" value="#{returnFormatController.selected.receiveStartDays}" title="#{bundleReturns.CreateReturnFormatTitle_receiveStartDays}" />
                         <p:outputLabel value="#{bundleReturns.CreateReturnFormatLabel_receiveSubmitDays}" for="receiveSubmitDays" />
                         <p:inputText id="receiveSubmitDays" value="#{returnFormatController.selected.receiveSubmitDays}" title="#{bundleReturns.CreateReturnFormatTitle_receiveSubmitDays}" />
                         <p:outputLabel value="#{bundleReturns.CreateReturnFormatLabel_receiveDeadline}" for="receiveDeadline" />
                         <p:inputText id="receiveDeadline" value="#{returnFormatController.selected.receiveDeadline}" title="#{bundleReturns.CreateReturnFormatTitle_receiveDeadline}" />
+
                         <p:outputLabel value="#{bundleReturns.CreateReturnFormatLabel_sendingAreaType}" for="sendingAreaType" />
-                        <p:inputText id="sendingAreaType" value="#{returnFormatController.selected.sendingAreaType}" title="#{bundleReturns.CreateReturnFormatTitle_sendingAreaType}" />
+                        <p:selectOneMenu id="sendingAreaType" value="#{returnFormatController.selected.sendingAreaType}" >
+                            <f:selectItems value="#{enumController.areaTypes}" ></f:selectItems>
+                        </p:selectOneMenu>
+
                         <p:outputLabel value="#{bundleReturns.CreateReturnFormatLabel_receivingAreaType}" for="receivingAreaType" />
-                        <p:inputText id="receivingAreaType" value="#{returnFormatController.selected.receivingAreaType}" title="#{bundleReturns.CreateReturnFormatTitle_receivingAreaType}" />
-                        <p:outputLabel value="#{bundleReturns.CreateReturnFormatLabel_id}" for="id" />
-                        <p:inputText id="id" value="#{returnFormatController.selected.id}" title="#{bundleReturns.CreateReturnFormatTitle_id}" />
+                        <p:selectOneMenu id="receivingAreaType" value="#{returnFormatController.selected.receivingAreaType}" >
+                            <f:selectItems value="#{enumController.areaTypes}" ></f:selectItems>
+                        </p:selectOneMenu>
+
                     </p:panelGrid>
                     <p:commandButton actionListener="#{returnFormatController.create}" value="#{bundleReturns.Save}" update="display,:ReturnFormatListForm:datalist,:growl" oncomplete="handleSubmit(args,'ReturnFormatCreateDialog');"/>
                     <p:commandButton value="#{bundleReturns.Cancel}" onclick="ReturnFormatCreateDialog.hide()"/>
