--- a/src/main/webapp/returnSubmission/submit_new_report.xhtml
+++ b/src/main/webapp/returnSubmission/submit_new_report.xhtml
@@ -31,7 +31,7 @@
                                     <p:outputLabel value="#{f.code}" ></p:outputLabel>
                                 </p:column>
                             </p:selectOneMenu>
-                            <p:commandButton value="To Submit" action="#{returnSubmissionController.toSubmitNewReportAfterSelection()}" ></p:commandButton>
+                            <p:commandButton ajax="false" value="To Submit" action="#{returnSubmissionController.toSubmitNewReportAfterSelection()}" ></p:commandButton>
                         </p:panelGrid>
 
                     </p:panel>
