--- a/src/main/webapp/returnSubmission/submit_new_report_selected.xhtml
+++ b/src/main/webapp/returnSubmission/submit_new_report_selected.xhtml
@@ -55,7 +55,7 @@
                             <p:calendar disabled="true" value="#{returnSubmissionController.selected.sentDate}" ></p:calendar>
 
 
-                            <p:commandButton value="Submit" action="#{returnSubmissionController.submitReturn()}" ></p:commandButton>
+                            <p:commandButton ajax="false" value="Submit" action="#{returnSubmissionController.submitReturn()}" ></p:commandButton>
 
                         </p:panelGrid>
 
