--- a/src/main/webapp/template.xhtml
+++ b/src/main/webapp/template.xhtml
@@ -23,17 +23,17 @@
                     <p:menubar rendered="#{webUserController.logged}">
                         <p:menuitem value="#{bundle.Home}" outcome="/index" icon="ui-icon-home"/>
                         <p:submenu label="Actions">
-                            <p:menuitem value="Submit New Return" action="#{returnSubmissionController.toSubmitNewReport()}" />
-                            <p:menuitem value="Monthly Statements" action="/monthlyStatementOfSchoolHealthActivities/index" />
-                            <p:menuitem value="Quartely Returns" action="/quarterlySchoolHealthReturn/index" />
+                            <p:menuitem ajax="false" value="Submit New Return" action="#{returnSubmissionController.toSubmitNewReport()}" />
+                            <p:menuitem ajax="false" value="Receive Returns" action="#{returnSubmissionController.toReceiveReturns()}" />
+                            
                         </p:submenu>
                         <p:submenu label="#{bundle.Maintenance}">
-                            <p:menuitem value="Manage Areas" action="/area/add_area_index" />
-                            <p:menuitem value="Manage Users" action="/webUser/add_webuser_index" />
-                            <p:menuitem value="Manage Schools" action="/institution/index" />
-                            <p:menuitem action="/item/List" value="Manage Items"/>
-                            <p:menuitem action="/returnFormat/List" value="Manage Return Formats"/>
-                            <p:menuitem action="/returnSubmission/List" value="Manage Return Submissions"/>
+                            <p:menuitem  ajax="false" value="Manage Areas" action="/area/add_area_index" />
+                            <p:menuitem  ajax="false" value="Manage Users" action="/webUser/add_webuser_index" />
+                            <p:menuitem  ajax="false"  value="Manage Schools" action="/institution/index" />
+                            <p:menuitem  ajax="false" action="/item/List" value="Manage Items"/>
+                            <p:menuitem  ajax="false" action="/returnFormat/List" value="Manage Return Formats"/>
+                            <p:menuitem  ajax="false" action="/returnSubmission/List" value="Manage Return Submissions"/>
                         </p:submenu>
                     </p:menubar>
                 </h:form>
